--- a/paginas/create_table.html
+++ b/paginas/create_table.html
@@ -2,23 +2,32 @@
 <html lang="en">
 
 <head>
+    <!-- Configurações da página -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Ícone da página -->
     <link rel="shortcut icon" href="../media/favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+
+    <!-- Estilos CSS -->
     <link rel="stylesheet" href="../css/styleLogin.css">
     <title>Criar uma Mesa</title>
 </head>
 
 <body>
-    <div class="loader"><img
-            src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/7937643/d20-clipart-md.png" alt="">
+    <!-- Elemento de carregamento -->
+    <div class="loader">
+        <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/7937643/d20-clipart-md.png" alt="">
     </div>
 
+    <!-- Container principal -->
     <div id="container">
+        <!-- Conteúdo da página -->
         <main class="telasLoginLogonCreation">
+            <!-- Formulário de criação de mesa -->
             <div class="criacao">
+                <!-- Logo -->
                 <div class="logo">
                     <picture>
                         <img src="../media/logo.png" alt="logo">
@@ -26,6 +35,7 @@
                 </div>
                 <div class="conteudo">
                     <form action="home_page.html">
+                        <!-- Campos do formulário -->
                         <div class="formulario Informations">
                             <p>
                                 <input type="text" id="nomeMesa" name="nomeMesa" placeholder="Nome da Mesa" required>
@@ -47,6 +57,7 @@
                             </p>
                         </div>
 
+                        <!-- Botões do formulário -->
                         <div class="botoes">
                             <button class="btConfirmar" type="submit" onclick="fecharJanela()">Criar Mesa</button>
                             <button class="btCancelar" type="reset" onclick="fecharJanela()">Cancelar</button>
@@ -56,44 +67,43 @@
                 </div>
             </div>
         </main>
+        <!-- Rodapé -->
         <footer>
             <div>&copy; Todos os Direitos Reservados 2023.</div>
         </footer>
-
-
     </div>
+
+    <!-- Script para definir a data mínima do campo "dataJogo" -->
+    <script>
+        const today = new Date().toISOString().split("T")[0] + 'T00:00';
+        var minDate = document.getElementById("dataJogo");
+        minDate.setAttribute('min', today);
+    </script>
+
+    <!-- Script para controlar a validação do campo "nJogadores" -->
+    <script>
+        var nJogadores = document.getElementById('nJogadores');
+        const maxPlayers = nJogadores.getAttribute('max');
+
+        nJogadores.addEventListener('blur', () => {
+            if (parseInt(nJogadores.value) > maxPlayers) {
+                nJogadores.style.border = '1px solid #994444';
+                nJogadores.style.backgroundColor = '#f3e1e1';
+                nJogadores.style.color = '#341717';
+            } else {
+                nJogadores.style.border = '';
+                nJogadores.style.backgroundColor = '';
+                nJogadores.style.color = '';
+            }
+        });
+
+        function fecharJanela() {
+            window.close();
+        }
+    </script>
+
+    <!-- Script externo para exibição da tela de carregamento -->
+    <script src="../scripts/scriptLoadingScreen.js"></script>
 </body>
-
-<script>
-    //coloca a data mínima se registrar um jogo como a atual
-    const today = new Date().toISOString().split("T")[0] + 'T00:00';
-    var minDate = document.getElementById("dataJogo");
-    minDate.setAttribute('min', today);
-
-    //setar o máximo de jogadores na mesa em 8
-    var nJogadores = document.getElementById('nJogadores');
-    const maxPlayers = nJogadores.getAttribute('max');
-
-    nJogadores.addEventListener('blur', () => {
-        if (parseInt(nJogadores.value) > maxPlayers) {
-            nJogadores.style.border = '1px solid #994444';
-            nJogadores.style.backgroundColor = '#f3e1e1';
-            nJogadores.style.color = '#341717';
-        }
-        else {
-            nJogadores.style.border = '';
-            nJogadores.style.backgroundColor = '';
-            nJogadores.style.color = '';
-        }
-    }
-    );
-
-    function fecharJanela() {
-        window.close();
-    }
-
-</script>
-
-<script src="../scripts/scriptLoadingScreen.js"></script>
 
 </html>
