--- a/paginas/home_page.html
+++ b/paginas/home_page.html
@@ -2,125 +2,135 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tela Principal</title>
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="shortcut icon" href="../media/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Configurações da página -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tela Principal</title>
+
+    <!-- Estilos CSS -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="shortcut icon" href="../media/favicon.ico" type="image/x-icon" />
+
+    <!-- Biblioteca de ícones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-
 <body>
-  <div class="loader"><img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/7937643/d20-clipart-md.png" alt=""></div>
+    <!-- Elemento de carregamento -->
+    <div class="loader"><img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/7937643/d20-clipart-md.png" alt=""></div>
 
-  <div id="container">
-    <header>
-      <div class="title">
-        <h1>Dragon's Dice</h1>
-        <form action="">
-          <div class="search-box">
-            <input type="search" class="input-search" placeholder="Buscar Mesas e GM's" />
-            <button class="btn-search" type="submit">
-              <i class="fas fa-search"></i>
-            </button>
-          </div>
-        </form>
-      </div>
-      <div class="userCard" >
-        <img class="userPerfilImage" src="../media/genericUser.jpg" alt="" onclick="window.location.href='perfil.html'"/>
-        <h2 class="nameUser" onclick="window.location.href='login.html'">Login</h2>
-      </div>
-    </header>
-
-    <div class="sidebar">
-      <div class="logo">
-        <a href="home_page.html">
-          <img src="../media/logo.png" alt="logo" />
-        </a>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a id="createNewTable" class="createNewTable" href="create_table.html" target="_blank">
-              <i class="fa-solid fa-plus"></i>
-              <p>Nova Mesa</p>
-            </a>
-          </li>
-
-          <li>
-            <a id="fichasDisponiveis" class="FichasDspoive" href="#">
-              <i class="fa-solid fa-receipt"></i>
-              <p>Fichas Disponíveis</p>
-            </a>
-          </li>
-
-          <li>
-            <a id="usuarioUser" class="usarioUser" href="perfil.html">
-              <i class="fa-solid fa-user"></i>
-              <p>Usuário</p>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <main>
-      <div class="conteudo-main">
-        <ul id="lista_mesas">
-          <li class="cardMesa">
-            <div onclick="window.location.href='table.html'">
-              <h3 class="cardMesa-titulo">Nome da Mesa</h3>
-              <div class="cardMesa-header">
-                <img src="../media/logo_mesa.png" alt="Imagem do Card" class="cardMesa-img" />
-                <div class="cardMesa-buttons">
-                  <button class="config-button">
-                    <i class="fa-solid fa-gear"></i>
-                  </button>
-                  <button class="delete-button">
-                    <i class="fa-solid fa-xmark"></i>
-                  </button>
-                </div>
-              </div>
+    <div id="container">
+        <!-- Cabeçalho -->
+        <header>
+            <div class="title">
+                <h1>Dragon's Dice</h1>
+                <form action="">
+                    <div class="search-box">
+                        <input type="search" class="input-search" placeholder="Buscar Mesas e GM's" />
+                        <button class="btn-search" type="submit">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </form>
             </div>
-          </li>
+            <div class="userCard">
+                <img class="userPerfilImage" src="../media/genericUser.jpg" alt="" onclick="window.location.href='perfil.html'" />
+                <h2 class="nameUser" onclick="window.location.href='login.html'">Login</h2>
+            </div>
+        </header>
 
-        </ul>
-      </div>
-    </main>
-    <footer>
-      <div class="conteudo-footer">
-        <div class="conteudo1">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
-            deserunt.
-          </p>
+        <!-- Barra lateral -->
+        <div class="sidebar">
+            <div class="logo">
+                <a href="home_page.html">
+                    <img src="../media/logo.png" alt="logo" />
+                </a>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a id="createNewTable" class="createNewTable" href="create_table.html" target="_blank">
+                            <i class="fa-solid fa-plus"></i>
+                            <p>Nova Mesa</p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a id="fichasDisponiveis" class="FichasDspoive" href="#">
+                            <i class="fa-solid fa-receipt"></i>
+                            <p>Fichas Disponíveis</p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a id="usuarioUser" class="usarioUser" href="perfil.html">
+                            <i class="fa-solid fa-user"></i>
+                            <p>Usuário</p>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
 
-        <div class="conteudo2">
-          <h2>Redes Sociais</h2>
-          <div class="redes-sociais">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitch"></i></a>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-          </div>
-        </div>
+        <main>
+            <div class="conteudo-main">
+                <!-- Lista de mesas -->
+                <ul id="lista_mesas">
+                    <li class="cardMesa">
+                        <div onclick="window.location.href='table.html'">
+                            <h3 class="cardMesa-titulo">Nome da Mesa</h3>
+                            <div class="cardMesa-header">
+                                <img src="../media/logo_mesa.png" alt="Imagem do Card" class="cardMesa-img" />
+                                <div class="cardMesa-buttons">
+                                    <button class="config-button">
+                                        <i class="fa-solid fa-gear"></i>
+                                    </button>
+                                    <button class="delete-button">
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </main>
 
-        <div class="conteudo3">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
-            deserunt.
-          </p>
-        </div>
-      </div>
-    </footer>
-  </div>
+        <footer>
+            <!-- Rodapé -->
+            <div class="conteudo-footer">
+                <div class="conteudo1">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
+                        deserunt.
+                    </p>
+                </div>
+
+                <div class="conteudo2">
+                    <h2>Redes Sociais</h2>
+                    <div class="redes-sociais">
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitch"></i></a>
+                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    </div>
+                </div>
+
+                <div class="conteudo3">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
+                        deserunt.
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <!-- Scripts -->
+    <script src="../scripts/scriptLoadingScreen.js"></script>
+    <script src="../scripts/scriptTableCreation.js"></script>
 </body>
-
-<script src="../scripts/scriptLoadingScreen.js"></script>
-<script src="../scripts/scriptTableCreation.js"></script>
-
 
 </html>
