--- a/paginas/sign-up.html
+++ b/paginas/sign-up.html
@@ -59,6 +59,23 @@
     
 </body>
 <script src="../scripts/scriptLoadingScreen.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"
+    integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+
+
+
+<script>
+    <!-- script mask -->
+    $(document).ready(function () {
+        $('#telefone').mask('(00) 000000000');
+    });
+</script>
 
 </html>
