--- a/paginas/sign-up.html
+++ b/paginas/sign-up.html
@@ -33,7 +33,7 @@
                             <input type="email" name="email" id="email" placeholder="E-mail">
                         </p>
                         <p>
-                            <input type="tel" name="telefone" id="telefone" placeholder="Telefone">
+                            <input type="tel" name="telefone" id="telUser" placeholder="Telefone">
                         </p>
                         <p>
                             <input type="hidden" id="cnpj" name="cnpj">
@@ -59,7 +59,8 @@
     
 </body>
 <script src="../scripts/scriptLoadingScreen.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
     integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
@@ -69,12 +70,10 @@
     crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
 
-
-
 <script>
     <!-- script mask -->
     $(document).ready(function () {
-        $('#telefone').mask('(00) 000000000');
+        $('#telUser').mask('(00) 000000000');
     });
 </script>
 
